Fix project overlay z-index

--- a/app/assets/stylesheets/timeline/_overlay.scss
+++ b/app/assets/stylesheets/timeline/_overlay.scss
@@ -129,6 +129,7 @@
 
 	&.open {
 		visibility: visible;
+    z-index: 999;
 		@include transform(translateY(0%));
 		@include transition(transform 0.5s $ease-out-expo);
 
